{
    "name": "PlayerInputAction",
    "maps": [
        {
            "name": "P1Movement",
            "id": "3b4849b0-479d-418d-9798-15cef53af744",
            "actions": [
                {
                    "name": "PlayerOneMovement",
                    "type": "PassThrough",
                    "id": "b761c721-ef54-43eb-b666-c92c82062da5",
                    "expectedControlType": "Analog",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "BlowerBlow",
                    "type": "PassThrough",
                    "id": "4fbac8f0-3fe8-4421-8abb-dd172848f741",
                    "expectedControlType": "Analog",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "BlowerPowerUps",
                    "type": "Button",
                    "id": "7226191e-3413-4d2c-b28e-e992c0691777",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "Movement",
                    "id": "45237e8d-c36f-4043-8d73-6e3482a3b73e",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerOneMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Positive",
                    "id": "6dab7027-41b9-4a73-a6ed-911329d592c3",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": ";PlayerController",
                    "action": "PlayerOneMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Negative",
                    "id": "19eae3ee-89bb-4863-91af-c41dd093c250",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": ";PlayerController",
                    "action": "PlayerOneMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "a969f259-b198-4386-8c96-5c25b95a9386",
                    "path": "<Keyboard>/w",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": ";PlayerController",
                    "action": "BlowerBlow",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dbf19763-1bd8-415d-b803-5ec82752e70c",
                    "path": "<Keyboard>/s",
                    "interactions": "Press",
                    "processors": "",
                    "groups": ";PlayerController",
                    "action": "BlowerPowerUps",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "P2Movement",
            "id": "5bd80cab-38a7-47bb-98db-0d6f74bc8144",
            "actions": [
                {
                    "name": "PlayerOneMovement",
                    "type": "PassThrough",
                    "id": "be121202-af25-4c13-afc5-5fcb7fdf139d",
                    "expectedControlType": "Analog",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "BlowerBlow",
                    "type": "PassThrough",
                    "id": "77118c54-6a3f-4b95-8b22-bb30e0d6e40e",
                    "expectedControlType": "Analog",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "BlowerPowerUps",
                    "type": "Button",
                    "id": "299b1183-8442-4ba3-bf2e-4601a62a5812",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "Movement",
                    "id": "52c51368-1b86-4976-a41c-97721665f17d",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerOneMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Negative",
                    "id": "83a2f066-1d41-4ed7-b14a-b3b05d1bf080",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": ";PlayerController",
                    "action": "PlayerOneMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Positive",
                    "id": "de0bd08d-b33a-42f1-af3c-1db7b8753f4f",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": ";PlayerController",
                    "action": "PlayerOneMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "0bae4bf3-fd47-4db4-a2c8-7d65889f5b51",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": ";PlayerController",
                    "action": "BlowerBlow",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "60a98e02-25f6-494a-904b-7e86de50071c",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "Press",
                    "processors": "",
                    "groups": ";PlayerController",
                    "action": "BlowerPowerUps",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "New Control Scheme",
            "bindingGroup": "New Control Scheme",
            "devices": []
        },
        {
            "name": "PlayerController",
            "bindingGroup": "PlayerController",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}